# Predators_and_Prey

./: CMakeLists.txt  README.md  coordinate.cc  trainer.py  trainer.sh
listener/: listener.cc
part1/: create_folder.py  trainer.py
part2/predator_prey/robobo_control/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
part2/predator_prey/robobo_control/config/: robobo_control.yaml
part2/predator_prey/robobo_control/launch/: robobo_control.launch  rrbot_rqt.launch  rrbot_rqt.perspective
part2/predator_prey/robobo_description/: CMakeLists.txt  package.xml
part2/predator_prey/robobo_description/launch/: robobo.launch  robobo.rviz
part2/predator_prey/robobo_description/meshes/: robobo (copy).fcstd  robobo (copy).stl  robobo.fcstd  robobo.stl  robobo_wheel.fcstd  robobo_wheel.stl
part2/predator_prey/robobo_description/urdf/: robobo (3rd copy).xacro  robobo (another copy).gazebo  robobo (another copy).xacro  robobo (copy).gazebo  robobo (copy).xacro  robobo.gazebo  robobo.xacro  robobo_without_sensor.gazebo  robobo_without_sensor.xacro
part2/predator_prey/robobo_gazebo/: CMakeLists.txt  package.xml
part2/predator_prey/robobo_gazebo/gym_robobo_predator_prey/: setup.py
part2/predator_prey/robobo_gazebo/gym_robobo_predator_prey/gym_robobo_predator_prey/: __init__.py
part2/predator_prey/robobo_gazebo/gym_robobo_predator_prey/gym_robobo_predator_prey.egg-info/: PKG-INFO  SOURCES.txt
part2/predator_prey/robobo_gazebo/gym_robobo_predator_prey/gym_robobo_predator_prey/envs/: __init__.py  robobo_predator_prey_env.py  robobo_predator_prey_env_real.py
part2/predator_prey/robobo_gazebo/launch/: robobo_world.launch  robobo_world_without_sensor.launch
part2/predator_prey/robobo_gazebo/plugin/: robobo_set_wheel_joint_velocity.cc
part2/predator_prey/robobo_gazebo/scripts/: config_predator  config_prey  create_folder.py  nn.py  robobo.py  robobo_coevolution_hall_of_fame_without_sensor.py  robobo_detection.py
part2/predator_prey/robobo_gazebo/scripts/draw/: draw_average_coevolution.py  draw_average_win.py  draw_coevolution.py  draw_fitness.py  draw_human_play.py  draw_ideal.py  draw_tracking.py  draw_win.py
part2/predator_prey/robobo_gazebo/scripts/fitness/predator0/: fitness.txt
part2/predator_prey/robobo_gazebo/scripts/fitness/predator1/: fitness.txt
part2/predator_prey/robobo_gazebo/scripts/fitness/predator2/: fitness.txt
part2/predator_prey/robobo_gazebo/scripts/fitness/prey/: fitness.txt
part2/predator_prey/robobo_gazebo/scripts/training/: robobo_cma.py  robobo_cma_complex.py  robobo_cma_homogeneous.py  robobo_coevolution.py  robobo_coevolution_cma.py  robobo_coevolution_hall_of_fame.py  robobo_coevolution_hall_of_fame_without_sensor.py  robobo_coevolution_hall_of_fame_without_sensor_bak.py  robobo_coevolution_without_sensor.py  robobo_coevolution_without_sensor_cma.py  robobo_evoluation.py  robobo_evolve.py  robobo_evolve_only_predator.py  robobo_gazebo_move_wheel.py  robobo_gazebo_server.py  robobo_master_tournament.py  rtest.py
part2/predator_prey/robobo_gazebo/worlds/: robobo.world
(+49 files in other folders)
