<?xml version="1.0"?>
<package>
  <name>robobo_description</name>
  <version>0.0.0</version>
  <description>The robobo_description package</description>

  <maintainer email="chen.jiunhan@gmail.com">JiunHan Chen</maintainer>

  <license>GNUv3</license>  

  <author email="chen.jiunhan@gmail.com">JiunHan Chen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
