<package>
  <name>robobo_gazebo</name>
  <version>0.1.0</version>
  <description>robobo_gazebo</description>
  <maintainer email="chen.jiunhan@gmail.com">JiunHan Chen</maintainer>

  <license>GPLv3</license>

  <author email="chen.jiunhan@gmail.com">JiunHan Chen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>robobo_msgs</build_depend>
  
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>robobo_control</run_depend>
  <run_depend>robobo_description</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>robobo_msgs</run_depend>    

  <export>
  </export>
</package>
